Slight refractoring, fixed plant energy